# BiobaseTypes

./: .buildbot-devel  .travis.yml  BiobaseTypes.cabal  README.md  cabal.project  changelog.md  default.nix  devel-stack.yaml  shell.nix  stack.yaml
.github/workflows/: action.yml
Biobase/Types/: Accession.hs  AminoAcidSequence.hs  BioSequence.hs  Bitscore.hs  Codon.hs  Energy.hs  Evalue.hs  Index.hs  Location.hs  Names.hs  NucleotideSequence.hs  NumericalExtremes.hs  Odds.hs  Position.hs  ReadingFrame.hs  Sequence.hs  Shape.hs  Strand.hs  Structure.hs  Taxonomy.hs
Biobase/Types/Index/: Type.hs
Biobase/Types/Names/: Internal.hs
DP/Backtraced/: BioSequence.hs  Codon.hs
tests/: properties.hs
