name:           BiobaseTypes
version:        0.1.0.0
author:         Christian Hoener zu Siederdissen, 2015
copyright:      Christian Hoener zu Siederdissen, 2015
homepage:       http://www.bioinf.uni-leipzig.de/Software/gADP/
maintainer:     choener@bioinf.uni-leipzig.de
category:       Data Structures, Bioinformatics
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
synopsis:
                Collection of types for bioinformatics
description:
                Types used in a number of bioinformatics libraries.



Extra-Source-Files:
  README.md
  changelog.md

library
  build-depends:  base        == 4.*
               ,  log-domain  == 0.10.*
  exposed-modules:
    Biobase.Types.Energy -- dummy

  default-extensions: Dummy
                    , Dummy
  default-language: Haskell2010

  ghc-options:
    -O2 -funbox-strict-fields

source-repository head
  type: git
  location: git://github.com/choener/BiobaseTypes

