name:           BiobaseTypes
version:        0.1.0.0
author:         Christian Hoener zu Siederdissen, 2015
copyright:      Christian Hoener zu Siederdissen, 2015
homepage:       https://github.com/choener/BiobaseTypes
maintainer:     choener@bioinf.uni-leipzig.de
category:       Data Structures, Bioinformatics
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.1
synopsis:       Collection of types for bioinformatics
description:
                Types used in a number of bioinformatics libraries.
                .
                <https://github.com/choener/BiobaseTypes/blob/master/README.md>



Extra-Source-Files:
  README.md
  changelog.md



library
  build-depends: base                     >= 4.7    && < 4.9
               , aeson                    == 0.8.*
               , binary                   == 0.7.*
               , cereal                   == 0.4.*
               , deepseq                  >= 1.3      && < 1.5
               , hashable                 == 1.2.*
               , log-domain               == 0.10.*
               , primitive                >= 0.5      && < 0.7
               , PrimitiveArray           == 0.6.0.*
               , QuickCheck               >= 2.7      && < 2.9
               , vector                   == 0.10.*
               , vector-binary-instances  == 0.2.*
               , vector-th-unbox          == 0.2.*
  exposed-modules:
    Biobase.Types.Index
    Biobase.Types.Index.Type
    Biobase.Types.Strand
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DataKinds
                    , DeriveGeneric
                    , FlexibleInstances
                    , KindSignatures
                    , MultiParamTypeClasses
                    , PatternSynonyms
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  ghc-options:
    -O2 -funbox-strict-fields



source-repository head
  type: git
  location: git://github.com/choener/BiobaseTypes

